添加router路由及其相应的功能，修改全局用户列表，添加客户端列表，修改main文件，修改日志格式和路径。企业微信报警有bug待完善。

--- a/config/conf.yaml
+++ b/config/conf.yaml
@@ -1,5 +1,10 @@
 mysql:
   dsn: root:root@tcp(127.0.0.1:3306)/user?charset=utf8&parseTime=True&loc=Local
+  database: user
 port: :9999
 jwt:
   secret: a_secret_crect
+robot:
+  monitor: https://qyapi.weixin.qq.com/cgi-bin/webhook/send?key=8fd6e912-468b-4cd5-bca5-fc4259783f7d
+user:
+  expiration: 20
