--- a/config/conf.yaml
+++ b/config/conf.yaml
@@ -1,12 +1,19 @@
 mysql:
-  dsn: root:root@tcp(127.0.0.1:3306)/user?charset=utf8&parseTime=True&loc=Local
-  database: user
-port: :9999
+  dsn: root:root@tcp(127.0.0.1:3306)/user?charset=utf8&parseTime=True&loc=Local # 数据库连接串
+  database: user # 数据库名
+port: :9999 # 端口
 jwt:
-  secret: a_secret_crect
+  secret: a_secret_crect # jwt签名
 robot:
-  monitor: https://qyapi.weixin.qq.com/cgi-bin/webhook/send?key=8fd6e912-468b-4cd5-bca5-fc4259783f7d
+  monitor: https://qyapi.weixin.qq.com/cgi-bin/webhook/send?key=8fd6e912-468b-4cd5-bca5-fc4259783f7d # 机器人地址
 user:
-  expiration: 20
+  expiration: 20 # UserList中用户过期时间，单位秒
 versionRecord:
   limit: 1000  # 限制返回的版本记录数
+system:
+  checkInterval: 1 # 检查系统状态的间隔时间，单位秒
+  memoryLimit: 60 # 内存使用率限制
+  cpuLimit: 60 # cpu使用率限制
+  receivedLimit: 20 # 网络接收流量限制
+  transmittedLimit: 20 # 网络传输流量限制
+  repeatAlarmInterval: 1800 # 重复报警间隔时间，单位秒
